--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <div class="text-2xl font-bold text-slate-900">
-                    <a href="#">株式会社テックイノベート</a>
+                    <a href="#">株式会社groove create</a>
                 </div>
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="#about" class="text-slate-600 hover:text-indigo-600 transition duration-300">会社概要</a>
@@ -79,6 +79,7 @@
             <div class="absolute inset-0 bg-gradient-to-r from-indigo-500 to-blue-500 opacity-90"></div>
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://placehold.co/1600x900/1a202c/ffffff/png?text=.'); opacity: 0.1;"></div>
             <div class="relative z-10">
+                <img src="images/top.jpg" alt="" class="relative z-10">
                 <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up">未来を創造するテクノロジー</h1>
                 <p class="text-lg md:text-xl text-indigo-100 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">私たちは革新的な技術で、お客様のビジネスを次のステージへ導きます。</p>
                 <a href="#services" class="mt-8 inline-block bg-white text-indigo-600 font-bold px-8 py-3 rounded-full hover:bg-indigo-50 transition duration-300 shadow-xl fade-in-up" style="transition-delay: 0.6s;">事業内容を見る</a>
