--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>groovecreate</title>
+    <title>株式会社groove create</title>
     <!-- Tailwind CSSの読み込み -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts (Inter & Noto Sans JP) の読み込み -->
@@ -76,10 +76,11 @@
     <main>
         <!-- ヒーローセクション -->
         <section class="relative h-[60vh] md:h-[80vh] min-h-[500px] flex items-center justify-center text-white text-center px-6">
-            <div class="absolute inset-0 bg-gradient-to-r from-indigo-500 to-blue-500 opacity-90"></div>
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://placehold.co/1600x900/1a202c/ffffff/png?text=.'); opacity: 0.1;"></div>
+            <!-- 画像をここに挿入してください -->
+            <img src="images/top.jpg" alt="メインビジュアル" class="absolute inset-0 w-full h-full object-cover">
+            <!-- 画像の上のオーバーレイ -->
+            <div class="absolute inset-0 bg-gradient-to-r from-indigo-600/70 to-blue-500/70"></div>
             <div class="relative z-10">
-                <img src="images/top.jpg" alt="" class="relative z-10">
                 <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up">未来を創造するテクノロジー</h1>
                 <p class="text-lg md:text-xl text-indigo-100 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">私たちは革新的な技術で、お客様のビジネスを次のステージへ導きます。</p>
                 <a href="#services" class="mt-8 inline-block bg-white text-indigo-600 font-bold px-8 py-3 rounded-full hover:bg-indigo-50 transition duration-300 shadow-xl fade-in-up" style="transition-delay: 0.6s;">事業内容を見る</a>
@@ -90,7 +91,7 @@
         <section id="about" class="py-24 bg-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title mb-4 fade-in-up">私たちについて</h2>
-                <p class="text-slate-600 max-w-3xl mx-auto mb-16 fade-in-up">株式会社テックイノベートは、2010年の創業以来、最先端のITソリューションを提供し続けてきました。お客様一人ひとりの課題に真摯に向き合い、最高の価値を提供することをお約束します。</p>
+                <p class="text-slate-600 max-w-3xl mx-auto mb-16 fade-in-up">株式会社groove createは、2010年の創業以来、最先端のITソリューションを提供し続けてきました。お客様一人ひとりの課題に真摯に向き合い、最高の価値を提供することをお約束します。</p>
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="fade-in-up">
                         <img src="https://placehold.co/600x400/e0e7ff/4f46e5?text=私たちのオフィス" alt="オフィス" class="rounded-lg shadow-2xl shadow-indigo-200/50 w-full">
@@ -147,7 +148,7 @@
                         </div>
                     </div>
                     <div class="bg-slate-50 p-8 rounded-xl fade-in-up" style="transition-delay: 0.3s;">
-                        <p class="text-slate-600 mb-6">"複雑な要件にもかかわらず、期待以上のシステムを構築していただきました。テックイノベート社に依頼して本当に良かったです。"</p>
+                        <p class="text-slate-600 mb-6">"複雑な要件にもかかわらず、期待以上のシステムを構築していただきました。groove create社に依頼して本当に良かったです。"</p>
                         <div class="flex items-center">
                             <img src="https://placehold.co/100x100/e2e8f0/334155?text=B様" class="w-12 h-12 rounded-full mr-4" alt="顧客B">
                             <div>
@@ -221,7 +222,7 @@
         <div class="container mx-auto px-6 py-12">
             <div class="grid md:grid-cols-3 gap-8 mb-8">
                 <div>
-                    <h3 class="text-xl font-bold mb-4">株式会社テックイノベート</h3>
+                    <h3 class="text-xl font-bold mb-4">株式会社groove create</h3>
                     <p class="text-slate-400">〒100-0005<br>東京都千代田区丸の内1-1-1<br>電話: 03-1234-5678</p>
                 </div>
                 <div>
@@ -242,7 +243,7 @@
                 </div>
             </div>
             <div class="border-t border-slate-700 pt-8 text-center text-slate-400 text-sm">
-                <p>&copy; 2025 株式会社テックイノベート. All Rights Reserved.</p>
+                <p>&copy; 2025 株式会社groove create. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -275,3 +276,4 @@
 
 </body>
 </html>
+
