--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="#about" class="text-slate-600 hover:text-indigo-600 transition duration-300">会社概要</a>
                     <a href="#services" class="text-slate-600 hover:text-indigo-600 transition duration-300">事業内容</a>
-                    <a href="#testimonials" class="text-slate-600 hover:text-indigo-600 transition duration-300">お客様の声</a>
                     <a href="#news" class="text-slate-600 hover:text-indigo-600 transition duration-300">お知らせ</a>
                     <a href="#contact" class="bg-indigo-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300 shadow-lg hover:shadow-indigo-500/50">お問い合わせ</a>
                 </nav>
@@ -65,7 +64,6 @@
             <div id="mobile-menu" class="hidden md:hidden mt-4">
                 <a href="#about" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">会社概要</a>
                 <a href="#services" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">事業内容</a>
-                <a href="#testimonials" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">お客様の声</a>
                 <a href="#news" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">お知らせ</a>
                 <a href="#contact" class="block mt-2 py-2 px-4 text-sm text-white bg-indigo-600 rounded-full text-center">お問い合わせ</a>
             </div>
@@ -132,53 +130,24 @@
             </div>
         </section>
         
-        <!-- お客様の声セクション -->
-        <section id="testimonials" class="py-24 bg-white">
-            <div class="container mx-auto px-6">
-                <h2 class="section-title text-center mb-16 fade-in-up">お客様の声</h2>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div class="bg-slate-50 p-8 rounded-xl fade-in-up">
-                        <p class="text-slate-600 mb-6">"素晴らしいサポートと技術力で、私たちのプロジェクトは大成功を収めました。特に、担当者の迅速で的確な対応には感謝しかありません。"</p>
-                        <div class="flex items-center">
-                            <img src="https://placehold.co/100x100/e2e8f0/334155?text=A様" class="w-12 h-12 rounded-full mr-4" alt="顧客A">
-                            <div>
-                                <p class="font-bold text-slate-800">A株式会社 ご担当者様</p>
-                                <p class="text-sm text-slate-500">食品メーカー</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-slate-50 p-8 rounded-xl fade-in-up" style="transition-delay: 0.3s;">
-                        <p class="text-slate-600 mb-6">"複雑な要件にもかかわらず、期待以上のシステムを構築していただきました。groove create社に依頼して本当に良かったです。"</p>
-                        <div class="flex items-center">
-                            <img src="https://placehold.co/100x100/e2e8f0/334155?text=B様" class="w-12 h-12 rounded-full mr-4" alt="顧客B">
-                            <div>
-                                <p class="font-bold text-slate-800">Bホールディングス株式会社様</p>
-                                <p class="text-sm text-slate-500">金融サービス</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- お知らせセクション -->
+         <!-- お知らせセクション -->
         <section id="news" class="py-24 bg-slate-50">
             <div class="container mx-auto px-6">
                 <h2 class="section-title text-center mb-16 fade-in-up">お知らせ</h2>
                 <div class="space-y-6 max-w-4xl mx-auto fade-in-up">
                     <a href="#" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                         <div class="flex justify-between items-center">
-                            <p class="text-slate-500 text-sm">2025.07.15</p>
+                            <p class="text-slate-500 text-sm">2025.07.01</p>
                             <span class="text-xs bg-indigo-100 text-indigo-800 font-semibold px-2 py-1 rounded-full">新サービス</span>
                         </div>
-                        <h3 class="text-lg font-semibold text-slate-800 mt-2">新サービス「AIアナリティクス」の提供を開始しました。</h3>
+                        <h3 class="text-lg font-semibold text-slate-800 mt-2">-----------------------------------</h3>
                     </a>
                     <a href="#" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                          <div class="flex justify-between items-center">
                             <p class="text-slate-500 text-sm">2025.06.20</p>
                             <span class="text-xs bg-slate-100 text-slate-800 font-semibold px-2 py-1 rounded-full">メディア</span>
                         </div>
-                        <h3 class="text-lg font-semibold text-slate-800 mt-2">【掲載情報】「TECH INSIGHT」に弊社代表のインタビューが掲載されました。</h3>
+                        <h3 class="text-lg font-semibold text-slate-800 mt-2">----------------------------------</h3>
                     </a>
                 </div>
                 <div class="text-center mt-12 fade-in-up">
@@ -192,7 +161,6 @@
             <div class="container mx-auto px-6 fade-in-up">
                 <div class="text-center">
                     <h2 class="section-title mb-4">お問い合わせ</h2>
-                    <p class="max-w-2xl mx-auto text-slate-600 mb-12">ご相談、お見積もりなど、お気軽にお問い合わせください。</p>
                 </div>
                 <div class="max-w-2xl mx-auto bg-slate-50/50 p-8 rounded-xl shadow-lg border border-slate-200">
                     <form>
@@ -223,7 +191,7 @@
             <div class="grid md:grid-cols-3 gap-8 mb-8">
                 <div>
                     <h3 class="text-xl font-bold mb-4">株式会社groove create</h3>
-                    <p class="text-slate-400">〒100-0005<br>東京都千代田区丸の内1-1-1<br>電話: 03-1234-5678</p>
+                    <p class="text-slate-400">〒272-0121<br>千葉県市川市末広１丁目１９番７－２１１号（ＳＡＴＯＭＩ－５番館）</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold mb-4">サイトマップ</h3>
