--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <!-- 画像の上のオーバーレイ -->
             <div class="absolute inset-0 bg-gradient-to-r from-indigo-600/70 to-blue-500/70"></div>
             <div class="relative z-10">
-                <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up">未来を創造するテクノロジー</h1>
-                <p class="text-lg md:text-xl text-indigo-100 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">私たちは革新的な技術で、お客様のビジネスを次のステージへ導きます。</p>
+                <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up">日本の魅力を伝えたい</h1>
+                <p class="text-lg md:text-xl text-indigo-100 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">最新技術を駆使して、世界中の人たちに日本の魅力を伝えていきます。</p>
                 <a href="#services" class="mt-8 inline-block bg-white text-indigo-600 font-bold px-8 py-3 rounded-full hover:bg-indigo-50 transition duration-300 shadow-xl fade-in-up" style="transition-delay: 0.6s;">事業内容を見る</a>
             </div>
         </section>
@@ -92,7 +92,7 @@
                 <p class="text-slate-600 max-w-3xl mx-auto mb-16 fade-in-up">株式会社groove createは、2010年の創業以来、最先端のITソリューションを提供し続けてきました。お客様一人ひとりの課題に真摯に向き合い、最高の価値を提供することをお約束します。</p>
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="fade-in-up">
-                        <img src="https://placehold.co/600x400/e0e7ff/4f46e5?text=私たちのオフィス" alt="オフィス" class="rounded-lg shadow-2xl shadow-indigo-200/50 w-full">
+                        <img src="images/logo.png" alt="オフィス" class="rounded-lg shadow-2xl shadow-indigo-200/50 w-full">
                     </div>
                     <div class="text-left fade-in-up" style="transition-delay: 0.3s;">
                         <h3 class="text-2xl font-bold text-slate-800 mb-4">革新と挑戦を、未来のために</h3>
