--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4">フォローする</h3>
                     <div class="flex space-x-4">
-                        <a href="#" class="text-slate-400 hover:text-white"><i class="fa-brands fa-facebook-f fa-lg"></i></a>
-                        <a href="#" class="text-slate-400 hover:text-white"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                        <a href="https://www.instagram.com/loco_japan/" class="text-slate-400 hover:text-white"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
