--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
         <section id="about" class="py-24 bg-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title mb-4 fade-in-up">私たちについて</h2>
-                <p class="text-slate-600 max-w-3xl mx-auto mb-16 fade-in-up">株式会社groove createは、2010年の創業以来、最先端のITソリューションを提供し続けてきました。お客様一人ひとりの課題に真摯に向き合い、最高の価値を提供することをお約束します。</p>
+                <p class="text-slate-600 max-w-3xl mx-auto mb-16 fade-in-up">異なる背景や文化を持つ人々が心を通わせ、互いに心地よい感覚を分かち合える場所を創り出すこと。それが私たちのビジョンです。</p>
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="fade-in-up">
                         <img src="images/logo.png" alt="オフィス" class="rounded-lg shadow-2xl shadow-indigo-200/50 w-full">
                     </div>
                     <div class="text-left fade-in-up" style="transition-delay: 0.3s;">
-                        <h3 class="text-2xl font-bold text-slate-800 mb-4">革新と挑戦を、未来のために</h3>
-                        <p class="text-slate-600 mb-4">私たちの使命は、テクノロジーの力で社会が抱える課題を解決し、より良い未来を創造することです。常に変化を恐れず、新しい価値を生み出すために挑戦し続けます。</p>
-                        <p class="text-slate-600">多様なバックグラウンドを持つプロフェッショナルなチームが、お客様の成功を全力でサポートします。</p>
+                        <h3 class="text-2xl font-bold text-slate-800 mb-4">日本の真の魅力を世界へ</h3>
+                        <p class="text-slate-600 mb-4">もっと多くの人がコミュニケーションをとり、音楽のグルーヴのように心が高鳴る瞬間を日本で体験してほしい。そうすることで、この国をもっと好きになってもらいたい。私たちの社名には、そんな願いが込められています。</p>
+                        <p class="text-slate-600">ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー</p>
                     </div>
                 </div>
             </div>
@@ -111,21 +111,23 @@
                     <!-- サービス1 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up">
                         <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-desktop fa-2x"></i></div>
-                        <h3 class="text-xl font-bold text-slate-800 mb-3">システム開発</h3>
-                        <p class="text-slate-600">最新技術を用いたオーダーメイド開発で、貴社の業務効率化を強力に支援します。</p>
+                        <h3 class="text-xl font-bold text-slate-800 mb-3">訪日外国人向け観光スポット提案サービス（ローンチ前）</h3>
+                        <p class="text-slate-600">ローカルが真におすすめする日本の体験を複数レコメンドし、一括代行予約を実施いたします。</p>
                     </div>
                     <!-- サービス2 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 0.3s;">
-                        <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-mobile-screen-button fa-2x"></i></div>
-                        <h3 class="text-xl font-bold text-slate-800 mb-3">アプリ開発</h3>
-                        <p class="text-slate-600">iOS/Androidアプリを企画から運用までワンストップで。魅力的なUI/UXを実現します。</p>
+                        <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-building fa-2x"></i></div>
+                        <h3 class="text-xl font-bold text-slate-800 mb-3">不動産コンサルティング</h3>
+                        <p class="text-slate-600">あなたに合わせた収益不動産をご提案いたします。</p>
                     </div>
                     <!-- サービス3 -->
+                    <!--
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 0.4s;">
                         <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-comments fa-2x"></i></div>
                         <h3 class="text-xl font-bold text-slate-800 mb-3">ITコンサルティング</h3>
                         <p class="text-slate-600">お客様の経営課題をITで解決。事業成長を加速させる最適な戦略を提案します。</p>
                     </div>
+                    -->
                 </div>
             </div>
         </section>
