--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社groove create</title>
-    <!-- Tailwind CSSの読み込み -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts (Inter & Noto Sans JP) の読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Heroicons (アイコン用) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
@@ -55,7 +52,6 @@
 </head>
 <body class="bg-slate-50 text-slate-700">
 
-    <!-- ヘッダー -->
     <header class="bg-white/80 backdrop-blur-lg shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
@@ -68,15 +64,13 @@
                     <a href="#news" class="text-slate-600 hover:text-indigo-600 transition duration-300">お知らせ</a>
                     <a href="#contact" class="bg-indigo-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300 shadow-lg hover:shadow-indigo-500/50">お問い合わせ</a>
                 </nav>
-                <!-- モバイルメニューボタン -->
                 <div class="md:hidden">
                     <button id="mobile-menu-button" class="text-slate-600 focus:outline-none">
                         <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                     </button>
                 </div>
             </div>
-             <!-- モバイルメニュー -->
-            <div id="mobile-menu" class="hidden md:hidden mt-4">
+              <div id="mobile-menu" class="hidden md:hidden mt-4">
                 <a href="#about" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">会社概要</a>
                 <a href="#services" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">事業内容</a>
                 <a href="#news" class="block py-2 px-4 text-sm text-slate-600 hover:bg-indigo-50 rounded-md">お知らせ</a>
@@ -86,41 +80,31 @@
     </header>
 
 
-<!-- メインコンテンツ -->
-    <main>
-        <!-- ヒーローセクション (カルーセルに変更) -->
+<main>
         <section class="relative h-[60vh] md:h-[80vh] min-h-[500px] flex items-center justify-center text-white text-center px-6 overflow-hidden">
-            <!-- カルーセルコンテナ -->
             <div id="hero-carousel" class="absolute inset-0 w-full h-full">
-                <!-- スライド1 -->
                 <div class="carousel-slide active">
                     <img src="images/top.jpg" alt="メインビジュアル1" class="absolute inset-0 w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-r from-white/30 to-white/50"></div>
+                    <div class="absolute inset-0 bg-gradient-to-r from-white/60 to-white/80"></div>
                 </div>
 
-                <!-- スライド2 (例: 別の画像) -->
                 <div class="carousel-slide">
-                    <!-- 画像が提供されていないため、プレースホルダーを使用します。必要に応じて更新してください。 -->
                     <img src="images/top2.jpg" alt="メインビジュアル2" class="absolute inset-0 w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-r from-white/30 to-white/50"></div>
+                     <div class="absolute inset-0 bg-gradient-to-r from-white/60 to-white/80"></div>
                 </div>
 
-                <!-- スライド3 (例: 別の画像) -->
                 <div class="carousel-slide">
-                    <!-- 画像が提供されていないため、プレースホルダーを使用します。必要に応じて更新してください。 -->
                     <img src="images/top3.jpg" alt="メインビジュアル3" class="absolute inset-0 w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-r from-white/30 to-white/50"></div>
+                     <div class="absolute inset-0 bg-gradient-to-r from-white/60 to-white/80"></div>
                 </div>
             </div>
 
-            <!-- 固定テキストコンテンツ -->
             <div class="relative z-10 flex flex-col items-center justify-center h-full w-full">
-                <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up">日本の魅力を伝えたい</h1>
-                <p class="text-lg md:text-xl text-indigo-100 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">最新技術を駆使して、世界中の人たちに日本の魅力を伝えていきます。</p>
+                <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight fade-in-up text-black">日本の魅力を伝えたい</h1>
+                <p class="text-lg md:text-xl text-gray-800 max-w-3xl mx-auto fade-in-up" style="transition-delay: 0.4s;">最新技術を駆使して、世界中の人たちに日本の魅力を伝えていきます。</p>
                 <a href="#services" class="mt-8 inline-block bg-white text-indigo-600 font-bold px-8 py-3 rounded-full hover:bg-indigo-50 transition duration-300 shadow-xl fade-in-up" style="transition-delay: 0.6s;">事業内容を見る</a>
             </div>
 
-            <!-- カルーセルナビゲーション (矢印) -->
             <button id="prev-slide" class="absolute left-6 top-1/2 -translate-y-1/2 bg-black/30 hover:bg-black/50 text-white p-3 rounded-full z-20 transition-all duration-300">
                 <i class="fas fa-chevron-left"></i>
             </button>
@@ -128,14 +112,11 @@
                 <i class="fas fa-chevron-right"></i>
             </button>
 
-            <!-- カルーセルインジケーター (ドット) -->
             <div id="carousel-dots" class="absolute bottom-8 z-20 flex space-x-2">
-                <!-- ドットはJavaScriptで生成されます -->
-            </div>
+                </div>
         </section>
-    
+   
 
-        <!-- 会社概要セクション -->
         <section id="about" class="py-24 bg-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title mb-4 fade-in-up">私たちについて</h2>
@@ -153,37 +134,25 @@
             </div>
         </section>
 
-        <!-- 事業内容セクション -->
         <section id="services" class="py-24 bg-slate-50">
             <div class="container mx-auto px-6">
                 <h2 class="section-title text-center mb-16 fade-in-up">事業内容</h2>
                 <div class="grid md:grid-cols-2 gap-8">
-                    <!-- サービス1 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up">
                         <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-desktop fa-2x"></i></div>
                         <h3 class="text-xl font-bold text-slate-800 mb-3">訪日外国人向け観光スポット提案サービス（ローンチ前）</h3>
                         <p class="text-slate-600">ローカルが真におすすめする日本の体験を複数レコメンドし、一括代行予約を実施いたします。</p>
                     </div>
-                    <!-- サービス2 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 0.3s;">
                         <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-building fa-2x"></i></div>
                         <h3 class="text-xl font-bold text-slate-800 mb-3">不動産コンサルティング</h3>
                         <p class="text-slate-600">あなたに合わせた収益不動産をご提案いたします。</p>
                     </div>
-                    <!-- サービス3 -->
-                    <!--
-                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up" style="transition-delay: 0.4s;">
-                        <div class="text-indigo-500 mb-5 inline-block bg-indigo-100 p-4 rounded-full"><i class="fa-solid fa-comments fa-2x"></i></div>
-                        <h3 class="text-xl font-bold text-slate-800 mb-3">ITコンサルティング</h3>
-                        <p class="text-slate-600">お客様の経営課題をITで解決。事業成長を加速させる最適な戦略を提案します。</p>
                     </div>
-                    -->
-                </div>
             </div>
         </section>
         
-         <!-- お知らせセクション -->
-        <section id="news" class="py-24 bg-slate-50">
+          <section id="news" class="py-24 bg-slate-50">
             <div class="container mx-auto px-6">
                 <h2 class="section-title text-center mb-16 fade-in-up">お知らせ</h2>
                 <div class="space-y-6 max-w-4xl mx-auto fade-in-up">
@@ -195,7 +164,7 @@
                         <h3 class="text-lg font-semibold text-slate-800 mt-2">-----------------------------------</h3>
                     </a>
                     <a href="#" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                         <div class="flex justify-between items-center">
+                           <div class="flex justify-between items-center">
                             <p class="text-slate-500 text-sm">2025.06.20</p>
                             <span class="text-xs bg-slate-100 text-slate-800 font-semibold px-2 py-1 rounded-full">メディア</span>
                         </div>
@@ -208,7 +177,6 @@
             </div>
         </section>
 
-        <!-- お問い合わせセクション -->
         <section id="contact" class="py-24 bg-white">
             <div class="container mx-auto px-6 fade-in-up">
                 <div class="text-center">
@@ -237,7 +205,6 @@
         </section>
     </main>
 
-    <!-- フッター -->
     <footer class="bg-slate-800 text-white">
         <div class="container mx-auto px-6 py-12">
             <div class="grid md:grid-cols-3 gap-8 mb-8">
@@ -267,7 +234,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script>
         // モバイルメニューのトグル機能
         const mobileMenuButton = document.getElementById('mobile-menu-button');
@@ -291,8 +257,106 @@
         // アニメーションを適用したい要素をすべて選択
         const elementsToAnimate = document.querySelectorAll('.fade-in-up');
         elementsToAnimate.forEach(el => observer.observe(el));
+
+
+        // カルーセル機能
+        const slides = document.querySelectorAll('.carousel-slide');
+        const prevButton = document.getElementById('prev-slide');
+        const nextButton = document.getElementById('next-slide');
+        const dotsContainer = document.getElementById('carousel-dots');
+        let currentSlide = 0;
+        let slideInterval; // 自動切り替えのインターバルID
+
+        // ドットナビゲーションの生成
+        function createDots() {
+            slides.forEach((_, index) => {
+                const dot = document.createElement('span');
+                dot.classList.add('w-3', 'h-3', 'bg-white/50', 'rounded-full', 'cursor-pointer', 'transition-all', 'duration-300');
+                dot.setAttribute('data-slide-index', index);
+                dotsContainer.appendChild(dot);
+                dot.addEventListener('click', () => {
+                    goToSlide(index);
+                    resetInterval();
+                });
+            });
+        }
+
+        // スライドの表示を更新
+        function updateSlideDisplay() {
+            slides.forEach((slide, index) => {
+                if (index === currentSlide) {
+                    slide.classList.add('active');
+                } else {
+                    slide.classList.remove('active');
+                }
+            });
+            updateDots();
+        }
+
+        // ドットの表示を更新
+        function updateDots() {
+            const dots = dotsContainer.querySelectorAll('span');
+            dots.forEach((dot, index) => {
+                if (index === currentSlide) {
+                    dot.classList.add('bg-white', 'scale-125');
+                    dot.classList.remove('bg-white/50');
+                } else {
+                    dot.classList.remove('bg-white', 'scale-125');
+                    dot.classList.add('bg-white/50');
+                }
+            });
+        }
+
+        // 指定したスライドへ移動
+        function goToSlide(index) {
+            currentSlide = index;
+            updateSlideDisplay();
+        }
+
+        // 次のスライドへ移動
+        function nextSlide() {
+            currentSlide = (currentSlide + 1) % slides.length;
+            updateSlideDisplay();
+        }
+
+        // 前のスライドへ移動
+        function prevSlide() {
+            currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+            updateSlideDisplay();
+        }
+
+        // 自動切り替えを開始
+        function startAutoSlide() {
+            slideInterval = setInterval(nextSlide, 5000); // 5秒ごとに切り替え
+        }
+
+        // 自動切り替えをリセット（手動操作があった場合など）
+        function resetInterval() {
+            clearInterval(slideInterval);
+            startAutoSlide();
+        }
+
+        // イベントリスナー
+        prevButton.addEventListener('click', () => {
+            prevSlide();
+            resetInterval();
+        });
+        nextButton.addEventListener('click', () => {
+            nextSlide();
+            resetInterval();
+        });
+
+        // 初期化
+        createDots();
+        updateSlideDisplay();
+        startAutoSlide(); // ページロード時に自動切り替えを開始
+
+        // マウスオーバーで自動切り替えを一時停止
+        const heroCarousel = document.getElementById('hero-carousel');
+        heroCarousel.addEventListener('mouseenter', () => clearInterval(slideInterval));
+        heroCarousel.addEventListener('mouseleave', () => startAutoSlide());
+
     </script>
 
 </body>
 </html>
-
