--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="text-gray-500 max-w-3xl mx-auto mb-20 fade-in-up">異なる背景や文化を持つ人々が心を通わせ、互いに心地よい感覚を分かち合える場所を創り出すこと。それが私たちのビジョンです。</p>
             <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="fade-in-up">
-                    <img src="https://placehold.co/600x400/333333/ffffff?text=Logo" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
+                    <img src="images/mid.jpg" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
                 </div>
                 <div class="text-left fade-in-up" style="transition-delay: 0.2s;">
                     <h3 class="text-3xl font-bold text-white mb-6">日本の真の魅力を世界へ</h3>
@@ -191,21 +191,23 @@
                 <a href="#" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
                         <p class="text-gray-500 text-sm">2025.07.01</p>
-                        <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">新サービス</span>
+                        <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
-                    <h3 class="text-lg font-semibold text-white mt-3">訪日外国人向け観光スポット提案サービスのティザーサイトを公開しました。</h3>
+                    <h3 class="text-lg font-semibold text-white mt-3">訪日外国人向け観光スポット提案サービス鋭意開発中。</h3>
                 </a>
                 <a href="#" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
-                        <p class="text-gray-500 text-sm">2025.06.20</p>
-                        <span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">メディア</span>
+                        <p class="text-gray-500 text-sm">2025.01.01</p>
+                        <span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
-                    <h3 class="text-lg font-semibold text-white mt-3">代表のインタビューが「Global Innovators」に掲載されました。</h3>
+                    <h3 class="text-lg font-semibold text-white mt-3">新規サービス「訪日外国人向け観光スポット提案サービス」の開発開始</h3>
                 </a>
             </div>
+            <!--
             <div class="text-center mt-16 fade-in-up">
                 <a href="#" class="bg-gray-800 text-white px-8 py-3 rounded-full hover:bg-gray-700 transition duration-300 font-semibold">もっと見る</a>
             </div>
+                -->
         </div>
     </section>
 
