--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                 <a href="#" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
                         <p class="text-gray-500 text-sm">2025.01.01</p>
-                        <span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
+                        <!--<span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>-->
+                         <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
                     <h3 class="text-lg font-semibold text-white mt-3">新規サービス「訪日外国人向け観光スポット提案サービス」の開発開始</h3>
                 </a>
