--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
         <div class="container mx-auto px-6">
             <h2 class="section-title text-center mb-20 fade-in-up">お知らせ</h2>
             <div class="space-y-6 max-w-4xl mx-auto fade-in-up">
-                <a href="#" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
+                <a href="https://rs09s.github.io/groovecreate/" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
                         <p class="text-gray-500 text-sm">2025.07.01</p>
                         <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
                     <h3 class="text-lg font-semibold text-white mt-3">訪日外国人向け観光スポット提案サービス鋭意開発中。</h3>
                 </a>
-                <a href="#" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
+                <a href="https://rs09s.github.io/groovecreate/" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
                         <p class="text-gray-500 text-sm">2025.01.01</p>
                         <!--<span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>-->
@@ -221,7 +221,7 @@
             </div>
             <div class="max-w-2xl mx-auto bg-gray-900/50 p-8 rounded-xl shadow-lg border border-gray-800">
                 <!-- Formsubmit の設定 -->
-                <form id="contact-form" action="https://formsubmit.co/your-email@example.com" method="POST">
+                <form id="contact-form" action="https://formsubmit.co/sakamoto@groove-create.com" method="POST">
                     <!--
                         ↑↑↑ ここにあなたのメールアドレスを設定してください ↑↑↑
                         例: action="https://formsubmit.co/sakamoto@groove-create.com"
