--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         例: action="https://formsubmit.co/sakamoto@groove-create.com"
                         Formsubmitの詳しい使い方は公式サイトをご確認ください: https://formsubmit.co/
                     -->
-                    <input type="hidden" name="_next" value="https://rs09s.github.io/groovecreate/?success=true">
+                    <input type="hidden" name="_next" value="https://rs09s.github.io/groovecreate/index.html?success=true">
                     <!--
                         ↑↑↑ 上記の "YOUR_SITE_URL" をあなたのサイトのURLに置き換えてください。
                         これにより、フォーム送信後にこのページに戻り、成功メッセージが表示されます。
