--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
         <div id="hero-carousel" class="absolute inset-0 w-full h-full z-0">
             <!-- スライド 1 -->
             <div class="carousel-slide active">
-                <img src="images/top.jpg" alt="メインビジュアル1" class="w-full h-full object-cover grayscale">
+                <img src="images/top.jpg" alt="メインビジュアル1" class="w-full h-full object-cover">
             </div>
             <!-- スライド 2 -->
             <div class="carousel-slide">
-                <img src="images/top2.jpg" alt="メインビジュアル2" class="w-full h-full object-cover grayscale">
+                <img src="images/top2.jpg" alt="メインビジュアル2" class="w-full h-full object-cover">
             </div>
             <!-- スライド 3 -->
             <div class="carousel-slide">
-                <img src="images/top3.jpg" alt="メインビジュアル3" class="w-full h-full object-cover grayscale">
+                <img src="images/top3.jpg" alt="メインビジュアル3" class="w-full h-full object-cover">
             </div>
         </div>
         
         <!-- グラデーションオーバーレイの透過度を調整 -->
-        <div class="absolute inset-0 bg-gradient-to-r from-gray-950 via-gray-950/90 to-transparent z-10"></div>
+        <div class="absolute inset-0 bg-gradient-to-r from-gray-950 to-transparent z-10"></div>
 
         <!-- テキストコンテンツ -->
         <!-- bottom の値を調整し、見出しと段落のサイズを小さく -->
