--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
             <div class="max-w-2xl mx-auto bg-gray-900/50 p-8 rounded-xl shadow-lg border border-gray-800">
                 <!-- Formsubmit の設定 -->
-                <form id="contact-form" action="https://formsubmit.co/sakamoto@groove-create.com" method="POST">
+                <form id="contact-form" action="https://formsubmit.co/info@groove-create.com" method="POST">
                     <!--
                         ↑↑↑ ここにあなたのメールアドレスを設定してください ↑↑↑
                         例: action="https://formsubmit.co/sakamoto@groove-create.com"
