--- a/index.html
+++ b/index.html
@@ -157,6 +157,41 @@
 
                 </div>
             </div>
+
+<!-- 会社情報セクションの追加 -->
+            <div class="mt-20 fade-in-up">
+                <!-- 会社情報見出しを削除 -->
+                <div class="bg-gray-800/50 p-8 rounded-xl border border-gray-700 max-w-2xl mx-auto text-left">
+                    <!-- 縦に項目が並ぶおしゃれな表に変更 -->
+                    <div class="space-y-6">
+                        <div class="border-b border-gray-700 pb-4">
+                            <p class="font-semibold text-gray-300 text-lg">会社名</p>
+                            <p class="text-gray-400 text-base">株式会社groove create</p>
+                        </div>
+                        <div class="border-b border-gray-700 pb-4">
+                            <p class="font-semibold text-gray-300 text-lg">所在地</p>
+                            <p class="text-gray-400 text-base">〒272-0121 千葉県市川市末広１丁目１９番７－２１１号（ＳＡＴＯＭＩ－５番館）</p>
+                        </div>
+                        <div class="border-b border-gray-700 pb-4">
+                            <p class="font-semibold text-gray-300 text-lg">設立</p>
+                            <p class="text-gray-400 text-base">2024年7月1日</p>
+                        </div>
+                        <div class="border-b border-gray-700 pb-4">
+                            <p class="font-semibold text-gray-300 text-lg">資本金</p>
+                            <p class="text-gray-400 text-base">3,000,000円</p>
+                        </div>
+                        <div>
+                            <p class="font-semibold text-gray-300 text-lg">事業内容</p>
+                            <ul class="list-disc list-inside text-gray-400 text-base pl-4">
+                                <li>訪日外国人向け観光スポット提案サービス</li>
+                                <li>不動産コンサルティング</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
         </div>
     </section>
 
