--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         <div class="absolute bottom-16 left-0 right-0 mx-auto px-6 z-20">
             <div class="max-w-xl text-left">
                 <!-- フォントサイズをさらに小さく調整 -->
-                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight fade-in-up text-white font-playfair">日本の魅力を伝えたい</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight fade-in-up text-white font-playfair">心が躍る"創造"を、世界の日常に。</h1>
                 <!-- フォントサイズをさらに小さく調整 -->
-                <p class="text-base md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">最新技術を駆使して、世界中の人たちに日本の魅力を伝えていきます。</p>
+                <p class="text-base md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">私たちはテクノロジーと人の温もりを融合させ、新たな価値を提供します。</p>
             </div>
         </div>
 
