--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <!-- フォントサイズをさらに小さく調整 -->
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight fade-in-up text-white font-playfair">心が躍る"創造"を、<br>世界の日常に。</h1>
                 <!-- フォントサイズをさらに小さく調整 -->
-                <p class="text-base md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">私たちはテクノロジーと人の温もりを融合させ、新たな価値を提供します。</p>
+                <p class="text-sm md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">私たちはテクノロジーと人の温もりを融合させ、新たな価値を提供します。</p>
             </div>
         </div>
 
