--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <!-- フォントサイズをさらに小さく調整 -->
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight fade-in-up text-white font-playfair">心が躍る"創造"を、<br>世界の日常に。</h1>
                 <!-- フォントサイズをさらに小さく調整 -->
-                <p class="text-sm md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">私たちはテクノロジーと人の温もりを融合させ、新たな価値を提供します。</p>
+                <p class="text-xs md:text-lg text-gray-300 fade-in-up" style="transition-delay: 0.2s;">私たちはテクノロジーと人の温もりを融合させ、新たな価値を提供します。</p>
             </div>
         </div>
 
@@ -183,8 +183,8 @@
                         <div>
                             <p class="font-semibold text-gray-300 text-lg">事業内容</p>
                             <ul class="list-disc list-inside text-gray-400 text-base pl-4">
-                                <li>訪日外国人向け観光スポット提案サービス</li>
-                                <li>不動産コンサルティング</li>
+                                <li>訪日外国人向け観光予約代行サービス</li>
+                                <li>不動産/経営コンサルティング</li>
                             </ul>
                         </div>
                     </div>
@@ -204,15 +204,15 @@
                 <!-- ホバー時のシャドウ効果を追加 -->
                 <div class="bg-gray-900 p-8 rounded-xl border border-gray-800 hover:border-gray-600 hover:-translate-y-2 transition-all duration-300 fade-in-up hover:shadow-xl">
                     <div class="text-gray-300 mb-6 inline-block bg-gray-900/50 p-4 rounded-full"><i class="fa-solid fa-desktop fa-2x"></i></div>
-                    <h3 class="text-xl font-bold text-white mb-3">訪日外国人向け観光スポット提案サービス（ローンチ前）</h3>
+                    <h3 class="text-xl font-bold text-white mb-3">訪日外国人向け観光予約代行サービス（開発中）</h3>
                     <p class="text-gray-500">ローカルが真におすすめする日本の体験を複数レコメンドし、一括代行予約を実施いたします。</p>
                 </div>
                 <!-- カード2 -->
                 <!-- ホバー時のシャドウ効果を追加 -->
                 <div class="bg-gray-900 p-8 rounded-xl border border-gray-800 hover:border-gray-600 hover:-translate-y-2 transition-all duration-300 fade-in-up hover:shadow-xl" style="transition-delay: 0.2s;">
                     <div class="text-gray-300 mb-6 inline-block bg-gray-900/50 p-4 rounded-full"><i class="fa-solid fa-building fa-2x"></i></div>
-                    <h3 class="text-xl font-bold text-white mb-3">不動産コンサルティング</h3>
-                    <p class="text-gray-500">あなたに合わせた収益不動産をご提案いたします。</p>
+                    <h3 class="text-xl font-bold text-white mb-3">不動産/経営コンサルティング</h3>
+                    <p class="text-gray-500">あなたに合わせた収益改善をご提案いたします。</p>
                 </div>
             </div>
         </div>
@@ -228,15 +228,15 @@
                         <p class="text-gray-500 text-sm">2025.07.01</p>
                         <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
-                    <h3 class="text-lg font-semibold text-white mt-3">訪日外国人向け観光スポット提案サービス鋭意開発中。</h3>
+                    <h3 class="text-lg font-semibold text-white mt-3">訪日外国人向け観光予約代行サービス鋭意開発中。</h3>
                 </a>
                 <a href="https://rs09s.github.io/groovecreate/" class="block bg-gray-950/50 p-6 rounded-lg border border-gray-800 hover:border-gray-600 hover:bg-gray-900/70 transition-all duration-300">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
-                        <p class="text-gray-500 text-sm">2025.01.01</p>
+                        <p class="text-gray-500 text-sm">2024.07.01</p>
                         <!--<span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>-->
                          <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
-                    <h3 class="text-lg font-semibold text-white mt-3">新規サービス「訪日外国人向け観光スポット提案サービス」の開発開始</h3>
+                    <h3 class="text-lg font-semibold text-white mt-3">株式会社groove create設立</h3>
                 </a>
             </div>
             <!--
@@ -256,7 +256,7 @@
             </div>
             <div class="max-w-2xl mx-auto bg-gray-900/50 p-8 rounded-xl shadow-lg border border-gray-800">
                 <!-- Formsubmit の設定 -->
-                <form id="contact-form" action="https://formsubmit.co/info@groove-create.com" method="POST">
+                <form id="contact-form" action="https://formsubmit.co/sakamoto@groove-create.com" method="POST">
                     <!--
                         ↑↑↑ ここにあなたのメールアドレスを設定してください ↑↑↑
                         例: action="https://formsubmit.co/sakamoto@groove-create.com"
@@ -299,7 +299,7 @@
             <div class="grid md:grid-cols-3 gap-10 mb-10">
                 <div>
                     <h3 class="text-xl font-bold mb-4">株式会社groove create</h3>
-                    <p class="text-gray-500 text-sm">〒272-0121<br>千葉県市川市末広１丁目１９番７－２１１号（ＳＡＴＯＭＩ－５番館）</p>
+                    <p class="text-gray-500 text-sm">〒272-0121<br>千葉県市川市末広１丁目１９番７</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold mb-4">サイトマップ</h3>
