--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     <section id="about" class="py-24 md:py-32 bg-gray-900">
         <div class="container mx-auto px-6 text-center">
             <!-- text-gradient を削除し、text-white を適用 -->
-            <h2 class="section-title mb-4 fade-in-up"><span class="text-white">私たちについて</span></h2>
-            <p class="text-gray-500 max-w-3xl mx-auto mb-20 fade-in-up">異なる背景や文化を持つ人々が心を通わせ、互いに心地よい感覚を分かち合える場所を創り出すこと。それが私たちのビジョンです。</p>
+            <h2 class="section-title mb-4 fade-in-up"><span class="text-white">ビジョン</span></h2>
+            <p class="text-gray-500 max-w-3xl mx-auto mb-20 fade-in-up">「創造が循環する社会へ。」<br>私たちは創造のエネルギーが人から人へ伝わり、連鎖することで、新たな価値や文化が生まれる社会の実現を目指します。</p>
             <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="fade-in-up">
                     <img src="images/mid.jpg" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
