--- a/index.html
+++ b/index.html
@@ -150,8 +150,12 @@
                     <img src="images/mid.jpg" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
                 </div>
                 <div class="text-left fade-in-up" style="transition-delay: 0.2s;">
-                    <h3 class="text-3xl font-bold text-white mb-6">日本の真の魅力を世界へ</h3>
-                    <p class="text-gray-500 mb-4 leading-relaxed">もっと多くの人がコミュニケーションをとり、音楽のグルーヴのように心が高鳴る瞬間を日本で体験してほしい。そうすることで、この国をもっと好きになってもらいたい。私たちの社名には、そんな願いが込められています。</p>
+                    <h3 class="text-3xl font-bold text-white mb-6">Values</h3>
+                    <p class="text-gray-500 mb-4 leading-relaxed">1. Groove First：楽しさやリズム感を大切に、感性に響く体験をデザインする。</p>
+                    <p class="text-gray-500 mb-4 leading-relaxed">2. Create Boldly：既成概念にとらわれず、大胆に創造し続ける。</p>
+                    <p class="text-gray-500 mb-4 leading-relaxed">3. Connect Deeply：人・社会・カルチャーと深くつながる。</p>
+                    <p class="text-gray-500 mb-4 leading-relaxed">4. Flow Together：多様なチームと調和し、共創の力を最大化する。</p>
+                    
      <!--               
 <p class="text-gray-500 leading-relaxed">私たちはテクノロジーと人の温もりを融合させ、忘れられない体験を創造します。</p> -->
 
@@ -168,9 +172,20 @@
                             <p class="font-semibold text-gray-300 text-lg">会社名</p>
                             <p class="text-gray-400 text-base">株式会社groove create</p>
                         </div>
+                        <div>
+                            <p class="font-semibold text-gray-300 text-lg">事業内容</p>
+                            <ul class="list-disc list-inside text-gray-400 text-base pl-4">
+                                <li>訪日外国人向け観光予約代行サービス</li>
+                                <li>不動産/経営コンサルティング</li>
+                            </ul>
+                        </div>
+                        <div class="border-b border-gray-700 pb-4">
+                            <p class="font-semibold text-gray-300 text-lg">代表取締役</p>
+                            <p class="text-gray-400 text-base">髙木 秀憲</p>
+                        </div>
                         <div class="border-b border-gray-700 pb-4">
                             <p class="font-semibold text-gray-300 text-lg">所在地</p>
-                            <p class="text-gray-400 text-base">〒272-0121 千葉県市川市末広１丁目１９番７－２１１号（ＳＡＴＯＭＩ－５番館）</p>
+                            <p class="text-gray-400 text-base">〒272-0121 千葉県市川市末広１丁目１９番７</p>
                         </div>
                         <div class="border-b border-gray-700 pb-4">
                             <p class="font-semibold text-gray-300 text-lg">設立</p>
@@ -179,13 +194,6 @@
                         <div class="border-b border-gray-700 pb-4">
                             <p class="font-semibold text-gray-300 text-lg">資本金</p>
                             <p class="text-gray-400 text-base">3,000,000円</p>
-                        </div>
-                        <div>
-                            <p class="font-semibold text-gray-300 text-lg">事業内容</p>
-                            <ul class="list-disc list-inside text-gray-400 text-base pl-4">
-                                <li>訪日外国人向け観光予約代行サービス</li>
-                                <li>不動産/経営コンサルティング</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
