--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     <section id="about" class="py-24 md:py-32 bg-gray-900">
         <div class="container mx-auto px-6 text-center">
             <!-- text-gradient を削除し、text-white を適用 -->
-            <h2 class="section-title mb-4 fade-in-up"><span class="text-white">ビジョン</span></h2>
+            <h2 class="section-title mb-4 fade-in-up"><span class="text-white">Our vision</span></h2>
             <p class="text-gray-500 max-w-3xl mx-auto mb-20 fade-in-up">「創造が循環する社会へ。」<br>私たちは創造のエネルギーが人から人へ伝わり、連鎖することで、新たな価値や文化が生まれる社会の実現を目指します。</p>
             <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="fade-in-up">
-                    <img src="images/mid.jpg" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
+                    <img src="images/mid2.jpg" alt="会社ロゴ" class="rounded-lg shadow-2xl shadow-gray-700/20 w-full">
                 </div>
                 <div class="text-left fade-in-up" style="transition-delay: 0.2s;">
                     <h3 class="text-3xl font-bold text-white mb-6">Values</h3>
@@ -172,7 +172,7 @@
                             <p class="font-semibold text-gray-300 text-lg">会社名</p>
                             <p class="text-gray-400 text-base">株式会社groove create</p>
                         </div>
-                        <div>
+                        <div class="border-b border-gray-700 pb-4">
                             <p class="font-semibold text-gray-300 text-lg">事業内容</p>
                             <ul class="list-disc list-inside text-gray-400 text-base pl-4">
                                 <li>訪日外国人向け観光予約代行サービス</li>
@@ -244,7 +244,7 @@
                         <!--<span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>-->
                          <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
                     </div>
-                    <h3 class="text-lg font-semibold text-white mt-3">株式会社groove create設立</h3>
+                    <h3 class="text-lg font-semibold text-white mt-3">株式会社groove create設立。</h3>
                 </a>
             </div>
             <!--
