--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-2">
                         <p class="text-gray-500 text-sm">2024.07.01</p>
                         <!--<span class="text-xs bg-gray-700 text-gray-200 font-semibold px-3 py-1 rounded-full self-start">サービス</span>-->
-                         <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">サービス</span>
+                         <span class="text-xs bg-gray-300 text-gray-900 font-semibold px-3 py-1 rounded-full self-start">会社</span>
                     </div>
                     <h3 class="text-lg font-semibold text-white mt-3">株式会社groove create設立。</h3>
                 </a>
