--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
         <div id="hero-carousel" class="absolute inset-0 w-full h-full z-0">
             <!-- スライド 1 -->
             <div class="carousel-slide active">
-                <img src="images/top.jpg" alt="メインビジュアル1" class="w-full h-full object-cover">
+                <img src="images/top5.png" alt="メインビジュアル1" class="w-full h-full object-cover">
             </div>
             <!-- スライド 2 -->
             <div class="carousel-slide">
-                <img src="images/top2.jpg" alt="メインビジュアル2" class="w-full h-full object-cover">
+                <img src="images/top6.png" alt="メインビジュアル2" class="w-full h-full object-cover">
             </div>
             <!-- スライド 3 -->
             <div class="carousel-slide">
-                <img src="images/top3.jpg" alt="メインビジュアル3" class="w-full h-full object-cover">
+                <img src="images/top8.png" alt="メインビジュアル3" class="w-full h-full object-cover">
             </div>
         </div>
         
