--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             <!-- スライド 3 -->
             <div class="carousel-slide">
-                <img src="images/top8.png" alt="メインビジュアル3" class="w-full h-full object-cover">
+                <img src="images/top8.png" alt="メインビジュアル3" class="w-full h-full object">
             </div>
         </div>
         
