--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
                         <li><a href="#" class="text-gray-500 hover:text-gray-300 transition">プライバシーポリシー</a></li>
                     </ul>
                 </div>
-                <div>
+               <!--<div>
                     <h3 class="text-lg font-semibold mb-4">フォローする</h3>
                     <div class="flex space-x-4">
                         <a href="https://www.instagram.com/loco_japan/" class="text-gray-500 text-2xl hover:text-gray-300 transition"><i class="fa-brands fa-instagram"></i></a>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="border-t border-gray-800 pt-8 text-center text-gray-600 text-sm">
                 <p>&copy; 2025 株式会社groove create. All Rights Reserved.</p>
